@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Farmacia {
  -NIF
}

class Utilizador {
  -NIF
  -nome
  -email
  -numeroSegurancaSocial
  -password
}

class Administrador {
  -NIF
  -nome
  -email
  -numeroSegurancaSocial
  -password
}

class Endereco {
  -morada
  -latitude
  -longitude
  -altitude
}

class Parque {
  -numeroMaximo
}

Administrador "1" -- "1" Utilizador: atua como >
Administrador "1" -- "1" Parque: define numeroMaximo >
Farmacia "1" -- "1" Parque: possui >
Parque "1" -- "1" Endereco: tem >
Farmacia "1" -- "1" Administrador: tem >

@enduml